--- a/README
+++ b/README
@@ -4,7 +4,7 @@ By default, commands are terminated by an LF (line-feed) and/or CR (carriage-ret
 
 I have only tested this project under Windows XP, with version 1.0.1 of the Arduino IDE, on an Arduino UNO R3.
 
-An IR LED must be connected to Arduino PWM pin 3.  You will need the IRremote library from Ken Shirriff.  For details, see http://www.arcfn.com/2009/08/multi-protocol-infrared-remote-library.html.
+An IR LED must be connected to Arduino PWM pin 3.  You will need the IRremote library from Ken Shirriff.  For details, see http://www.arcfn.com/2009/08/multi-protocol-infrared-remote-library.html and https://github.com/shirriff/Arduino-IRremote
 
 The project consists of four files:
 ArduinoServer.ino
